@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-11-10T00:42:12Z",
+  "timestamp" : "2023-11-10T08:11:39Z",
   "count_outdated" : 1105,
   "uniques_outdated" : 702,
-  "count" : 1139,
-  "uniques" : 722,
+  "count" : 1140,
+  "uniques" : 723,
   "clones" : [
     {
       "timestamp": "2023-10-27T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
