@@ -1,3 +1,12 @@
+2023-11-10T08:11:39Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6822312500 # 1330
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-10
+* notice: last 14d: unq all: 3 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 702 1105 / 722 1139
+* notice: next accum: outdated-unq outdated-all / unq all: 702 1105 / 723 1140
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-10-27 2023-11-10]
+
 2023-11-10T00:42:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6819217720 # 1329
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-10
